--- a/pom.xml
+++ b/pom.xml
@@ -24,4 +24,21 @@
         <version>1.20.1</version>
     </dependency>
 </dependencies>
+    <build>
+        <plugins>
+            <!-- Add this plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>org.example.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
